CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
ENABLE_TESTING()
PROJECT(OCC_FACETER)
SET(CMAKE_CXX_STANDARD 11)
# Allow use of find_package(HDF5), find_package(MOAB), etc.
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/cmake)

FIND_PACKAGE(MOAB REQUIRED)
# need to find either OCE or OCC
FIND_PACKAGE(OCE QUIET) 
FIND_PACKAGE(OCC QUIET)

IF(NOT OCE_FOUND AND NOT OCC_FOUND)
  MESSAGE(STATUS "OCE and OCC not found")
ELSEIF( OCE_FOUND AND NOT OCC_FOUND )
  SET(OPENCASCADE_INCLUDES )
ELSEIF ( NOT OCE_FOUND AND OCC_FOUND )  
  SET(OPENCASCADE_INCLUDE_DIRS ${OpenCASCADE_INCLUDE_DIR})
ENDIF() 

FIND_PACKAGE(CGAL REQUIRED COMPONENTS Core)

ADD_SUBDIRECTORY(src)
